--- a/mobile/RackApp/package.json
+++ b/mobile/RackApp/package.json
@@ -30,6 +30,7 @@
     "@capacitor/preferences": "^4.0.2",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
+    "@ionic/pwa-elements": "^3.1.1",
     "@ionic/storage": "^3.0.6",
     "bootstrap-icons": "^1.10.2",
     "chart.js": "^4.1.2",
