--- a/mobile/RackApp/package.json
+++ b/mobile/RackApp/package.json
@@ -34,6 +34,7 @@
     "@ionic/storage": "^3.0.6",
     "bootstrap-icons": "^1.10.2",
     "chart.js": "^4.1.2",
+    "ionic-selectable": "^4.9.0",
     "ionicons": "^6.0.3",
     "jquery": "^3.6.3",
     "ng2-charts": "^4.1.1",
